# python-code-executor

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
python_code_executor/: __init__.py  executor.py  server.py
tests/: test_executor.py
